@@ -1,6 +1,6 @@
 Roundcube Webmail Context Menu
 ==============================
-This plugin adds a context menu to the message list. Menu link are:
+This plugin adds a context menu to the message list. Menu links are:
 mark as read
 mark as unread
 mark as flagged
@@ -12,6 +12,14 @@ delete
 print
 save
 show source
+open in new window
+
+This plugin also adds a context menu to the folder list. Menu links are:
+mark all as read
+compact
+empty
+collapse all folders
+expand all folders
 open in new window
 
 Install
@@ -33,3 +41,4 @@ rcm_contextmenu_register_command(command, callback, label [, pos [, sep [, multi
  (optional) sep: [before|after] put a separating line before or after this item
  (optional) multi: [true|false] should the item be enabled when multiple messages are selected
  (optional) addsub: [true|false] add the new item to a sub menu
+ (optional) obj: the menu object to which the item should be added
